tests/baselines/reference/parserForStatement1.d.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserForStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserForStatement1.d.ts (1 errors) ====
    for (;;) {
    ~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
    }